Move two methods from EAM to Miradi, and fix a dictionary URL bug